cmake_minimum_required(VERSION 3.30)
project(ccc)
set(CMAKE_CXX_STANDARD 17)
# Force Debug build
set(CMAKE_BUILD_TYPE Debug CACHE STRING "Build type" FORCE)

# Debug flags: disable optimizations, keep frame pointers, full debug info
set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g -fno-omit-frame-pointer -fno-inline -gdwarf-4")





add_executable(20s2h 20s2h.cpp)
add_executable(20s2 20s2.cpp)
add_executable(ccc18s4 ccc18s4.cpp)
add_executable(ccc11s4 ccc11s4.cpp)
add_executable(ccc21s4 ccc21s4.cpp)
add_executable(ccc24s4 ccc24s4.cpp)
add_executable(16BITSWONLY 16BITSWONLY.cpp)
add_executable(ccc23s4 ccc23s4.cpp)
add_executable(ccc22s4 ccc22s4.cpp)
add_executable(aac2p3 aac2p3.cpp)
add_executable(aac2p4 aac2p4.cpp)
add_executable(ccc20s4 ccc20s4.cpp)
add_executable(acc5p5 acc5p5.cpp)
add_executable(cco03p2 cco03p2.cpp)
add_executable(cco17p4 cco17p4.cpp)
add_executable(wc15c4j4 wc15c4j4.cpp)
add_executable(graph3p1 graph3p1.cpp)
add_executable(cco24p1 cco24p1.cpp)
add_executable(mockccc2025s1 mockccc2025s1.cpp)
add_executable(mockccc2025s2 mockccc2025s2.cpp)
add_executable(mockccc2025s3 mockccc2025s3.cpp)
add_executable(mockccc2025s4 mockccc2025s4.cpp)
add_executable(canada21p3 canada21p3.cpp)
add_executable(ccc24s5 ccc24s5.cpp)
add_executable(ccc13s5 ccc13s5.cpp)
add_executable(daacc1p1 daacc1p1.cpp)
add_executable(daacc1p2 daacc1p2.cpp)
add_executable(daacc1p3 daacc1p3.cpp)
add_executable(daacc1p4 daacc1p4.cpp)
add_executable(daacc1p5 daacc1p5.cpp)
add_executable(daacc1p6 daacc1p6.cpp)
add_executable(olyrim2 olyrim2.cpp)
add_executable(year2016p6 year2016p6.cpp)
add_executable(dcc1p1 dcc1p1.cpp)
add_executable(dcc1p2 dcc1p2.cpp)
add_executable(dcc1p3 dcc1p3.cpp)
add_executable(dcc1p4 dcc1p4.cpp)
add_executable(dcc1p5 dcc1p5.cpp)
add_executable(cses1068 cses1068.cpp)
add_executable(cses1083 cses1083.cpp)
add_executable(cses1069 cses1069.cpp)
add_executable(cses1094 cses1094.cpp)
add_executable(cses1070 cses1070.cpp)
add_executable(cses1071 cses1071.cpp)
add_executable(cses1072 cses1072.cpp)
add_executable(cses1092 cses1092.cpp)
add_executable(cses1617 cses1617.cpp)
add_executable(cses1618 cses1618.cpp)
add_executable(cses1754 cses1754.cpp)
add_executable(cses1755 cses1755.cpp)
add_executable(cses2205 cses2205.cpp)
add_executable(cses2165 cses2165.cpp)
add_executable(cses1622 cses1622.cpp)
add_executable(cses1623 cses1623.cpp)
add_executable(cses1624 cses1624.cpp)
add_executable(cses3399 cses3399.cpp)
add_executable(cses3419 cses3419.cpp)
add_executable(cses3217 cses3217.cpp)
add_executable(cses3311 cses3311.cpp)
add_executable(cses2431 cses2431.cpp)
add_executable(cses1743 cses1743.cpp)
add_executable(cses1625 cses1625.cpp)
add_executable(cses1621 cses1621.cpp)
add_executable(cses1084 cses1084.cpp)
add_executable(cses1090 cses1090.cpp)
add_executable(cses1091 cses1091.cpp)
add_executable(cses1619 cses1619.cpp)
add_executable(cses1629 cses1629.cpp)
add_executable(cses1640 cses1640.cpp)
add_executable(cses1643 cses1643.cpp)
add_executable(cses1074 cses1074.cpp)
add_executable(cses2183 cses2183.cpp)
add_executable(cses2216 cses2216.cpp)
add_executable(cses2217 cses2217.cpp)
add_executable(cses1141 cses1141.cpp)
add_executable(cses1073 cses1073.cpp)
add_executable(cses1163 cses1163.cpp)
add_executable(cses3420 cses3420.cpp)
add_executable(cses3421 cses3421.cpp)
add_executable(cses2162 cses2162.cpp)
add_executable(cses2163 cses2163.cpp)
add_executable(cses2168 cses2168.cpp)
add_executable(cses2169 cses2169.cpp)
add_executable(cses1164 cses1164.cpp)
add_executable(cses1620 cses1620.cpp)
add_executable(cses1630 cses1630.cpp)
add_executable(cses1631 cses1631.cpp)
add_executable(cses1641 cses1641.cpp)
add_executable(cses1642 cses1642.cpp)
add_executable(cses1645 cses1645.cpp)
add_executable(cses1660 cses1660.cpp)
add_executable(cses1661 cses1661.cpp)
add_executable(cses1662 cses1662.cpp)
add_executable(cses2428 cses2428.cpp)
add_executable(cses1085 cses1085.cpp)
add_executable(cses1632 cses1632.cpp)
add_executable(cses1644 cses1644.cpp)
add_executable(cses1633 cses1633.cpp)
